# V6

./: .gitignore  CMakeLists.txt  README.md  Readme.md  main  main.cpp  mainwindow.cpp  mainwindow.h  readme.md  resources.qrc
.cursor/rules/: test.mdc
assets/models/: drone.gltf
drone_geojson/: Atlas_path.geojson
include/: MainWindow.h
include/api/: ChatGPTClient.h
include/components/: LeftSidebar.h  MapViewer.h  RightSidebar.h  TopBar.h  VehicleInfoWidget.h  mapbox.h  mapfunctions.h
include/components/LeftsideBar/: missioncontrol.h  settings.h  vechileconfiguration.h
include/components/RightsideBar/: taskdetails.h
include/database/: DatabaseManager.h
include/dialogs/: ResponseDialog.h
include/drone/: DroneFunctions.h
include/map/: geometry.h  mapbox.h  mapfunctions.h
include/simulation/: SimulationView.h
resources/html/: map_viewer.html
src/: MainWindow.cpp  main.cpp  map.cpp  map.h  mapviewer.cpp  mapviewer.h
src/api/: ChatGPTClient.cpp
src/components/: LeftSidebar.cpp  MapViewer.cpp  RightSidebar.cpp  TopBar.cpp  VehicleInfoWidget.cpp  mapbox.cpp  mapfunctions.cpp
src/components/LeftsideBar/: missioncontrol.cpp  settings.cpp  vechileconfiguration.cpp
src/components/RightsideBar/: taskdetails.cpp
src/database/: DatabaseManager.cpp
src/dialogs/: ResponseDialog.cpp
src/drone/: DroneFunctions.cpp
src/map/: geometry.cpp  mapbox.cpp  mapfunctions.cpp
src/simulation/: SimulationView.cpp
